Fix header z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ body {
 
 header {
     position: fixed;
+    z-index: 5;
     display: flex;
     justify-content: space-between;
     align-items: center;
